[package]
name = "stats-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dotenv = "0.15.0"
serde_json = "1.0.89"
chrono = "0.4.23"
